[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Doc/NaM.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ObjectScenes/Stats.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=3]
radius = 23.9079
height = 67.158

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.8691
height = 43.3716

[node name="NaM" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 6.38, 5.82522 )
shape = SubResource( 3 )

[node name="FloorEdge" type="RayCast2D" parent="."]
visible = false
position = Vector2( 50, 50 )
enabled = true

[node name="WallEdge" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 50 )
enabled = true
cast_to = Vector2( 55, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 4.18123, 1.28828 )
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 3
invulnerable_time = 0.2
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
